--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -286,7 +286,7 @@ title = 'Home' %} {% block content %}
         <div class="wrapper-work">
             <div class="row">
                 <div class="col-12 col-lg-6">
-                    <div class="img-work">
+                    <div class="img-work ">
                         <img
                             class="w-100"
                             src="assets/images/Picture.png"
@@ -331,7 +331,7 @@ title = 'Home' %} {% block content %}
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 order-lg-3">
-                    <div class="img-work">
+                    <div class="img-work ">
                         <img
                             class="w-100"
                             src="assets/images/Picture.png"
@@ -376,7 +376,7 @@ title = 'Home' %} {% block content %}
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <div class="img-work">
+                    <div class="img-work main-img-work">
                         <img
                             class="w-100"
                             src="assets/images/Picture.png"
