--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -18,11 +18,11 @@
                         </p>
                         <div class="info-person">
                             <div class="location d-flex align-items-center">
-                                <img src="../assets/images/Icon-loction.svg" alt="" srcset="">
+                                <img src="assets/images/Icon-loction.svg" alt="" srcset="">
                                 <span class="name-main">Ahmedabad, India</span>
                             </div>
                             <div class="new-project d-flex align-items-center">
-                                <div class=""><img src="../assets/images/Icon-dot.svg" alt="" srcset=""></div>
+                                <div class=""><img src="assets/images/Icon-dot.svg" alt="" srcset=""></div>
                                 <span class="available"
                                     >Available for new projects</span
                                 >
@@ -40,7 +40,7 @@
                             </div>
                             <div class="box">
                                 <a href="">
-                                    <img src="../assets/images/figmaa.svg" alt="" srcset="">
+                                    <img src="assets/images/figmaa.svg" alt="" srcset="">
                                 </a>
                             </div>
                         </div>
@@ -82,7 +82,7 @@
                                 alt=""
                                 srcset=""
                             />
-                            <div class="wrapper-gray"></div>
+                            <!-- <div class="wrapper-gray"></div> -->
                         </div>
                     </div>
                 </div>
@@ -364,7 +364,7 @@
                             <span class="mb-0">Storybook</span>
                             <span class="mb-0">Git</span>
                         </div>
-                        <div class="icon-button">
+                        <div class="icon-button"> 
                             <a href="#"
                                 ><img
                                     src="assets/images/icon-button.svg"
