--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -294,7 +294,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <div class="details-project">
+                    <div class="details-project ">
                         <div class="project-title">
                             <h3>Fiskil</h3>
                         </div>
@@ -339,11 +339,11 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <div class="details-project">
+                    <div class="details-project project-details-main ">
                         <div class="project-title">
                             <h3>Fiskil</h3>
                         </div>
-                        <div class="project-details">
+                        <div class="project-details ">
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur
                                 adipiscing elit. Maecenas nec urna ac tellus
